[package]
name = "krb5proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
libgssapi = { version = "0.8.3"}
base64 = "0.22.1"
bytes = "1.10.1"
http = "1.3.1"
pin-project-lite = "0.2.16"
